tests/ui/type/type-mismatch-same-crate-name.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-same-crate-name.rs:17:20
   |
LL |         a::try_foo(foo2);
   |         ---------- ^^^^ expected `main::a::Foo`, found a different `main::a::Foo`
   |         |
   |         arguments to this function are incorrect
   |
note: there are multiple different versions of crate `crate_a1` in the dependency graph
  --> $DIR/auxiliary/crate_a1.rs:1:1
   |
LL | pub struct Foo;
   | ^^^^^^^^^^^^^^ this is the expected type
   |
  ::: $DIR/auxiliary/crate_a2.rs:1:1
   |
LL | pub struct Foo;
   | -------------- this is the found type
   = help: you can use `cargo tree` to explore your dependency tree
note: function defined here
  --> $DIR/auxiliary/crate_a1.rs:10:8
   |
LL | pub fn try_foo(x: Foo){}
   |        ^^^^^^^

error[E0308]: mismatched types
  --> $DIR/type-mismatch-same-crate-name.rs:24:20
   |
LL |         a::try_bar(bar2);
   |         ---------- ^^^^ expected trait `main::a::Bar`, found a different trait `main::a::Bar`
   |         |
   |         arguments to this function are incorrect
   |
note: there are multiple different versions of crate `crate_a1` in the dependency graph
  --> $DIR/auxiliary/crate_a1.rs:3:1
   |
LL | pub trait Bar {}
   | ^^^^^^^^^^^^^ this is the expected trait
   |
  ::: $DIR/auxiliary/crate_a2.rs:3:1
   |
LL | pub trait Bar {}
   | ------------- this is the found trait
   = help: you can use `cargo tree` to explore your dependency tree
note: function defined here
  --> $DIR/auxiliary/crate_a1.rs:11:8
   |
LL | pub fn try_bar(x: Box<dyn Bar>){}
   |        ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
